2002-10-21  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/connectionpoint_ops.c (diagram_update_connections_object):
	Allows more than one connectionpoint on an object to be moved at a
	time (bug #96306).

2002-10-18  Stanislav Brabec  <sbrabec@suse.cz>

	* configure.in: Added cs to ALL_LINGUAS.

2002-10-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/paginate_psprint.c: Removed unnecessary decl of autosave
	stuff.

	* app/display.c (ddisplay_set_renderer): Calls to begin/end render.

	* app/export_png.c (export_png_ok): Saving more variables from the
	evil setjmp.

2002-10-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/dialibartrenderer.c (begin_render):
	(end_render): Correct pushing and popping of font contexts.
	(draw_string): Double zooming eliminated, strange twiddle factor
	introduced (grumble).  Close to working now, but there are still
	strange differences from font to font.  In particular, some fonts
	really mess with the cursor and extents.

	* app/render_eps.c (export_eps): 
	* app/diapsrenderer.c (dia_ps_renderer_finalize): 
	Fixed file closing confusion, no longer dependent on PS/EPS.

	* app/diagram.c (diagram_place_down_selected) 
	(diagram_place_up_selected): Now implemented.

	* lib/font.c (dia_font_init): 
	* lib/font.h: 
	Redesigned the font init/context pushing code.  Start of fix for
	font name differences.
	
2002-10-15  Kjartan Maraas  <kmaraas@gnome.org>

	* app/sheets_dialog_callbacks.c: Fix a typo.
	
2002-10-15  Hans Breuer  <hans@breuer.org>

	* app/diapsrenderer.[hc] : (new files, old content :-)
	simple base class for post script rendering. Does neither 
	use Pango/FT2 nor does it handle non latin1 characters. 
	The fancy stuff which nowadays appears to be needed should 
	probably be done in derived class(es)

	* app/makefile.msc app/Makefile.am : added new files

	* app/paginate_psrint.c : re-enabled and used as test
	for the simple ps renderer above.

	* app/render_eps.[hc] : ripped out common ps code and